# serenity-guild-storage

./: Cargo.toml
src/: lib.rs
